* removing extra icons * fixing spacing in scss and css files

--- a/styles/modules/globals.module.scss
+++ b/styles/modules/globals.module.scss
@@ -1,8 +1,10 @@
+@import "variables.scss";
+
 .body {
   padding: 0;
   margin: 0;
   font-family: fira Sans, sans-serif;
-  color: #064635;
+  color: $color-primary;
 }
 
 .link {
@@ -10,17 +12,12 @@
   text-decoration: none;
 }
 
-// * {
-//   box-sizing: border-box;
-// }
-
-
 .list {
-    list-style: none;
-    padding: unset;
-    line-height: 2.25rem;
+  list-style: none;
+  padding: unset;
+  line-height: 2.25rem;
 }
 
 .bottom_line {
-    border-bottom: 3px solid #064635;
+  border-bottom: 3px solid $color-primary;
 }
