--- a/styles/modules/portafolio.module.scss
+++ b/styles/modules/portafolio.module.scss
@@ -1,71 +1,71 @@
-@import "variables.scss";
+@import 'variables.scss';
 
-.container { 
-    width: 40%;
-    margin: auto;
-    padding: 5px;
+.container {
+  width: 40%;
+  margin: auto;
+  padding: 5px;
 }
 
 .subtitle {
-    text-transform: uppercase;
-    margin: 1rem 0;
+  text-transform: uppercase;
+  margin: 1rem 0;
 }
 
 .repos_container {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 1rem;
-    row-gap: 1.5rem;
-    transition: all .6s;
-    margin: 1.2rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 1rem;
+  row-gap: 1.5rem;
+  transition: all 0.6s;
+  margin: 1.2rem 0;
 }
 
 .repo {
-    width: 48%;
-    border-radius: 5px;
-    box-shadow: 5px 10px 8px 8px;
-    cursor: pointer;
+  width: 48%;
+  border-radius: 5px;
+  box-shadow: 5px 10px 8px 8px;
+  cursor: pointer;
 
-    &_light {
-        background-color: $color-tertiary;
+  &_light {
+    background-color: $color-tertiary;
+  }
+
+  &_dark {
+    background-color: $color-quaternary;
+  }
+
+  &:hover {
+    transform: translate(-5px, -5px);
+    transition: all 0.6s;
+  }
+
+  &_image {
+    width: 100%;
+    height: 85px;
+
+    & img {
+      border-radius: 5px 5px 0 0;
+    }
+  }
+
+  &_info {
+    min-height: 100px;
+    padding: 0 5px;
+    display: flex;
+    flex-direction: column;
+
+    & h3,
+    p {
+      margin: 4px 0;
     }
 
-    &_dark {
-        background-color: $color-quaternary;
+    &_text_dark p,
+    h3 {
+      color: $color-primary;
     }
+  }
 
-    &:hover {
-        transform: translate(-5px, -5px);
-        transition: all .6s;
-
-    }
-    
-    &_image {
-        width: 100%;
-        height: 85px;  
-
-        & img {
-            border-radius: 5px 5px 0 0;
-        }
-    }
-
-    &_info {
-        min-height: 100px;
-        padding: 0 5px;
-        display: flex;
-        flex-direction: column;
-
-        & h3,p  {
-            margin: 4px 0;
-        }
-
-        &_text_dark p, h3{
-            color: $color-primary;
-        }
-    }
-
-    &_link {
-        margin: 2px 0;
-
-    }
+  &_link {
+    margin: 2px 0;
+  }
 }
