--- a/styles/modules/variables.scss
+++ b/styles/modules/variables.scss
@@ -1,5 +1,5 @@
 $color-primary: #064635;
 $color-secondary: #519259;
-$color-tertiary: #F0BB62;
+$color-tertiary: #f0bb62;
 $color-tertiary-light: rgba(246, 241, 198, 0.8);
-$color-quaternary: #F4EEA9;
+$color-quaternary: #f4eea9;
